feat: add build metadata tracking, vLLM support, and dashboard enhancements - Add build metadata (DATE, COMMIT) to llama.cpp and vllm Docker images - Create vLLM build script with transformers from git - Add dashboard API endpoint to retrieve image metadata - Display build metadata in dashboard header with relative time formatting - Add verbose logging flags (verbose, log_verbosity, log_file) to llama.cpp - Update vllm Dockerfile with newer base image and CUDA architecture - Add systemd service installer script - Add start.sh script for quick service startup - Update vllm template to use v0.12.0

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -330,7 +330,10 @@
     <div id="app" class="container mx-auto p-6 hidden">
         <header class="mb-8">
             <div class="flex justify-between items-start mb-4">
-                <h1 class="text-3xl font-bold">LLM Service Dashboard</h1>
+                <div>
+                    <h1 class="text-3xl font-bold">LLM Service Dashboard</h1>
+                    <div id="image-metadata" class="text-xs text-gray-500 mt-1"></div>
+                </div>
                 <button onclick="logout()" class="bg-red-600 hover:bg-red-700 px-4 py-2 rounded font-semibold">
                     Logout
                 </button>
