--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -174,6 +174,24 @@
                     </div>
                 </div>
 
+                <!-- Custom Parameters Section -->
+                <div class="border-t border-gray-700 pt-4 mt-4">
+                    <div class="flex justify-between items-center mb-2">
+                        <label class="flex items-center gap-2">
+                            <span class="text-sm font-medium">Custom Parameters</span>
+                            <span id="custom-params-count" class="text-xs text-gray-500">(0 configured)</span>
+                        </label>
+                        <button type="button" onclick="addCustomParameterRow()"
+                            class="px-3 py-1 bg-orange-600 hover:bg-orange-700 rounded text-xs font-semibold">
+                            <i class="fa-solid fa-plus mr-1"></i>Add Custom
+                        </button>
+                    </div>
+                    <div id="custom-params-container" class="space-y-2"></div>
+                    <p class="text-xs text-gray-500 mt-2">
+                        Add CLI flags not in the predefined list. Flag names must start with - or --. Leave value empty for boolean flags.
+                    </p>
+                </div>
+
                 <!-- API Key -->
                 <div>
                     <label class="block text-sm font-medium mb-2">API Key (optional, auto-generated if empty)</label>
