feat: global API key support, code quality improvements, and vLLM enhancements
- Add global API key feature via LLM_DOCK_API_KEY environment variable
  - Display API key in dashboard header next to Logout button
  - Add copy-to-clipboard functionality for global API key
  - Add "Use Global" button in service forms to quickly apply global key
  - New API endpoint: GET /api/global-api-key

- Code quality improvements
  - Reformat app.py for consistency (imports, quotes, spacing)
  - Remove unused imports from compose_manager.py and openwebui_integration.py
  - Simplify API endpoints (remove /v2/ prefix)
  - Add selection preservation when viewing logs to prevent losing text selection

- Build and deployment improvements
  - Update vLLM Dockerfile to base on v0.15.1 for simpler builds
  - Remove --no-cache flag from build-vllm.sh for faster rebuilds
  - Simplify start.sh to dashboard-only startup
  - Update vllm template to use llm-dock-vllm image

- Add vLLM benchmark utility script for performance testing

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -195,7 +195,12 @@
                 <!-- API Key -->
                 <div>
                     <label class="block text-sm font-medium mb-2">API Key (optional, auto-generated if empty)</label>
-                    <input type="text" id="api-key" placeholder="Leave empty to auto-generate" class="w-full bg-gray-700 border border-gray-600 rounded px-3 py-2 text-white font-mono text-sm focus:outline-none focus:border-blue-500">
+                    <div class="flex gap-2">
+                        <input type="text" id="api-key" placeholder="Leave empty to auto-generate" class="flex-1 bg-gray-700 border border-gray-600 rounded px-3 py-2 text-white font-mono text-sm focus:outline-none focus:border-blue-500">
+                        <button type="button" id="use-global-api-key-btn" onclick="useGlobalApiKey()" class="px-4 py-2 bg-purple-600 hover:bg-purple-700 rounded text-sm font-semibold whitespace-nowrap hidden" title="Set to global API key">
+                            <i class="fa-solid fa-globe mr-1"></i>Use Global
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Command Preview -->
@@ -352,9 +357,18 @@
                     <h1 class="text-3xl font-bold">LLM Service Dashboard</h1>
                     <div id="image-metadata" class="text-xs text-gray-500 mt-1"></div>
                 </div>
-                <button onclick="logout()" class="bg-red-600 hover:bg-red-700 px-4 py-2 rounded font-semibold">
-                    Logout
-                </button>
+                <div class="flex items-center gap-4">
+                    <div id="global-api-key-display" class="hidden flex items-center gap-2 bg-gray-800 px-3 py-2 rounded border border-gray-700">
+                        <span class="text-xs text-gray-400">API Key (default):</span>
+                        <span id="global-api-key-value" class="text-sm font-mono text-gray-300"></span>
+                        <button onclick="copyGlobalApiKey()" class="text-blue-400 hover:text-blue-300 ml-1" title="Copy global API key">
+                            <i class="fa-solid fa-copy"></i>
+                        </button>
+                    </div>
+                    <button onclick="logout()" class="bg-red-600 hover:bg-red-700 px-4 py-2 rounded font-semibold">
+                        Logout
+                    </button>
+                </div>
             </div>
             <div class="flex gap-4">
                 <div id="gpu-stats" class="flex-shrink-0"></div>
