--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -34,6 +34,35 @@
             border-radius: 50%;
             background: #1f2937;
         }
+        .param-tooltip {
+            position: absolute;
+            left: 0;
+            bottom: calc(100% + 6px);
+            z-index: 50;
+            width: 280px;
+            background: #1e293b;
+            border: 1px solid #475569;
+            border-radius: 8px;
+            padding: 10px 12px;
+            font-size: 12px;
+            line-height: 1.5;
+            color: #cbd5e1;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.4);
+            pointer-events: none;
+            opacity: 0;
+            transition: opacity 0.15s;
+        }
+        .param-tooltip::after {
+            content: '';
+            position: absolute;
+            top: 100%;
+            left: 16px;
+            border: 6px solid transparent;
+            border-top-color: #475569;
+        }
+        .param-ref-row:hover .param-tooltip {
+            opacity: 1;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
@@ -153,43 +182,52 @@
                     <input type="text" id="model-hf-name" class="w-full bg-gray-700 border border-gray-600 rounded px-3 py-2 text-white focus:outline-none focus:border-blue-500" readonly>
                 </div>
 
-                <!-- Dynamic Parameters -->
-                <div>
+                <!-- Parameters + Reference (two-column layout) -->
+                <div id="params-section" class="hidden">
                     <div class="flex justify-between items-center mb-2">
                         <label class="flex items-center gap-2">
                             <span class="text-sm font-medium">Parameters</span>
                             <span id="params-count" class="text-xs text-gray-500">(0 configured)</span>
                         </label>
-                        <div id="advanced-buttons" class="flex gap-2">
+                        <div class="flex gap-2">
                             <button type="button" onclick="openCopyFromModal()" class="px-3 py-1 bg-purple-600 hover:bg-purple-700 rounded text-xs font-semibold">
                                 <i class="fa-solid fa-copy mr-1"></i>Copy from...
                             </button>
-                            <button type="button" onclick="openParamBrowser()" class="px-3 py-1 bg-blue-600 hover:bg-blue-700 rounded text-xs font-semibold">
-                                <i class="fa-solid fa-plus mr-1"></i>Add Parameter
+                            <button type="button" onclick="resetServiceParams()" class="px-3 py-1 bg-gray-600 hover:bg-gray-700 rounded text-xs font-semibold">
+                                <i class="fa-solid fa-rotate-left mr-1"></i>Reset
                             </button>
                         </div>
                     </div>
-                    <div id="dynamic-params-container" class="space-y-2">
-                        <!-- Parameter rows will be inserted here dynamically -->
+                    <div class="flex gap-4">
+                        <!-- Left: param rows -->
+                        <div class="flex-1 min-w-0">
+                            <div id="dynamic-params-container" class="flex flex-col gap-2">
+                                <!-- Parameter rows inserted here dynamically -->
+                            </div>
+                        </div>
+                        <!-- Right: parameter reference panel -->
+                        <div id="param-ref-panel" class="w-72 flex-shrink-0">
+                            <div class="bg-gray-900 rounded-lg p-3 border border-gray-700">
+                                <div class="flex items-center justify-between mb-2">
+                                    <h3 class="text-xs font-semibold text-gray-300">
+                                        <i class="fa-solid fa-book mr-1 text-gray-400"></i>Parameter Reference
+                                    </h3>
+                                </div>
+                                <div class="relative mb-2">
+                                    <i class="fa-solid fa-magnifying-glass absolute left-2.5 top-2 text-gray-500 text-xs"></i>
+                                    <input type="text" id="serve-param-search" placeholder="Search flags..."
+                                        oninput="filterServeParamRef()"
+                                        class="w-full bg-gray-700 border border-gray-600 rounded pl-7 pr-3 py-1.5 text-xs font-mono focus:outline-none focus:border-blue-500 placeholder-gray-500">
+                                </div>
+                                <div id="serve-param-ref-list" class="overflow-y-auto space-y-0.5 text-xs max-h-72">
+                                    <!-- Populated by JS -->
+                                </div>
+                                <div id="serve-param-ref-empty" class="text-gray-500 text-xs py-4 text-center hidden">
+                                    No matching parameters.
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-
-                <!-- Custom Parameters Section -->
-                <div class="border-t border-gray-700 pt-4 mt-4">
-                    <div class="flex justify-between items-center mb-2">
-                        <label class="flex items-center gap-2">
-                            <span class="text-sm font-medium">Custom Parameters</span>
-                            <span id="custom-params-count" class="text-xs text-gray-500">(0 configured)</span>
-                        </label>
-                        <button type="button" onclick="addCustomParameterRow()"
-                            class="px-3 py-1 bg-orange-600 hover:bg-orange-700 rounded text-xs font-semibold">
-                            <i class="fa-solid fa-plus mr-1"></i>Add Custom
-                        </button>
-                    </div>
-                    <div id="custom-params-container" class="space-y-2"></div>
-                    <p class="text-xs text-gray-500 mt-2">
-                        Add CLI flags not in the predefined list. Flag names must start with - or --. Leave value empty for boolean flags.
-                    </p>
                 </div>
 
                 <!-- API Key -->
@@ -306,44 +344,6 @@
             <div class="p-4 border-t border-gray-700 flex justify-end">
                 <button onclick="closeCopyFromModal()" class="px-4 py-2 bg-gray-600 hover:bg-gray-700 rounded font-semibold">
                     Cancel
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Parameter Browser Modal (high z-index) -->
-    <div id="param-browser-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-[60] hidden p-8">
-        <div class="bg-gray-800 rounded-lg w-full max-w-5xl border border-gray-700 max-h-[90vh] flex flex-col">
-            <div class="flex justify-between items-center p-6 border-b border-gray-700 flex-shrink-0">
-                <h2 class="text-2xl font-bold">Browse Parameters</h2>
-                <button onclick="closeParamBrowser()" class="text-gray-400 hover:text-white text-2xl font-bold">&times;</button>
-            </div>
-            <div class="flex flex-1 min-h-0">
-                <!-- Left: Parameter List -->
-                <div class="flex-1 flex flex-col border-r border-gray-700 min-w-0">
-                    <div class="p-4 border-b border-gray-700 flex-shrink-0">
-                        <input
-                            type="text"
-                            id="param-search-input"
-                            placeholder="Search parameters..."
-                            class="w-full px-3 py-2 bg-gray-700 border border-gray-600 rounded text-sm focus:outline-none focus:border-blue-500"
-                            oninput="filterParameterList(this.value)"
-                        >
-                    </div>
-                    <div id="param-list-container" class="overflow-y-auto flex-1 p-4 space-y-1">
-                        <!-- Parameters grouped by category will be inserted here -->
-                    </div>
-                </div>
-                <!-- Right: Parameter Details -->
-                <div class="w-80 bg-gray-900 border-l border-gray-700 p-6 overflow-y-auto flex flex-col">
-                    <div id="param-details" class="text-gray-400">
-                        <p class="text-sm">Select a parameter to see details</p>
-                    </div>
-                </div>
-            </div>
-            <div class="p-4 border-t border-gray-700 flex gap-3 justify-end flex-shrink-0">
-                <button onclick="closeParamBrowser()" class="px-4 py-2 bg-gray-600 hover:bg-gray-700 rounded font-semibold">
-                    Close
                 </button>
             </div>
         </div>
