--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -294,6 +294,42 @@
         </div>
     </div>
 
+    <!-- Rename Service Modal -->
+    <div id="rename-service-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+        <div class="bg-gray-800 rounded-lg w-full max-w-md border border-gray-700 shadow-2xl">
+            <div class="p-6 border-b border-gray-700">
+                <div class="flex items-center gap-3 mb-2">
+                    <div class="bg-blue-600 rounded-full p-3">
+                        <i class="fa-solid fa-pen text-white text-xl"></i>
+                    </div>
+                    <h2 class="text-2xl font-bold">Rename Service</h2>
+                </div>
+            </div>
+            <div class="p-6">
+                <p class="text-gray-400 text-sm mb-1">Current name</p>
+                <p class="text-white font-semibold font-mono mb-4" id="rename-service-old-name"></p>
+                <label class="block text-gray-400 text-sm mb-1" for="rename-service-input">New name</label>
+                <input
+                    type="text"
+                    id="rename-service-input"
+                    class="w-full px-3 py-2 bg-gray-900 border border-gray-600 rounded font-mono text-white focus:outline-none focus:border-blue-500"
+                    placeholder="new-service-name"
+                    onkeydown="if(event.key==='Enter'){event.preventDefault();confirmRename()}"
+                >
+                <p class="text-xs text-gray-500 mt-2">Alphanumeric, hyphens, and underscores only. Service must be stopped.</p>
+                <p id="rename-service-error" class="text-red-400 text-sm mt-2 hidden"></p>
+            </div>
+            <div class="p-6 border-t border-gray-700 flex gap-3 justify-end">
+                <button onclick="closeRenameModal()" class="px-4 py-2 bg-gray-600 hover:bg-gray-700 rounded font-semibold">
+                    Cancel
+                </button>
+                <button id="rename-service-confirm" onclick="confirmRename()" class="px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded font-semibold">
+                    <i class="fa-solid fa-pen mr-2"></i>Rename
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- Preview Service Modal -->
     <div id="preview-service-modal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
         <div class="bg-gray-800 rounded-lg w-full max-w-3xl border border-gray-700 shadow-2xl max-h-[90vh] flex flex-col">
