refactor: split monolithic app.js into modular JS files
- Split 2222-line app.js into 10 focused files under static/js/
- api.js: API client, auth, login/logout
- utils.js: clipboard, toast, formatting helpers
- services.js: service cards, control, rename, delete, preview
- gpu.js: GPU monitoring and graph
- logs.js: log modal and polling
- system-info.js: disk usage and model listing
- service-modal/param-reference.js: llama-server flag reference data
- service-modal/param-rows.js: parameter row management and copy-from
- service-modal/create-service.js: create/update modal logic
- init.js: dashboard initialization and auto-refresh

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -431,6 +431,15 @@
         </section>
     </div>
 
-    <script src="/static/app.js"></script>
+    <script src="/static/js/api.js"></script>
+    <script src="/static/js/utils.js"></script>
+    <script src="/static/js/services.js"></script>
+    <script src="/static/js/gpu.js"></script>
+    <script src="/static/js/logs.js"></script>
+    <script src="/static/js/system-info.js"></script>
+    <script src="/static/js/service-modal/param-reference.js"></script>
+    <script src="/static/js/service-modal/param-rows.js"></script>
+    <script src="/static/js/service-modal/create-service.js"></script>
+    <script src="/static/js/init.js"></script>
 </body>
 </html>
