--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -442,6 +442,7 @@
         </section>
     </div>
 
+    <script src="/static/js/modal-manager.js"></script>
     <script src="/static/js/api.js"></script>
     <script src="/static/js/utils.js"></script>
     <script src="/static/js/services.js"></script>
