--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -72,12 +72,12 @@
             <h2 class="text-2xl font-bold mb-6">LLM Dashboard Login</h2>
             <form id="login-form" onsubmit="handleLogin(event)">
                 <div class="mb-4 relative">
-                    <label class="block text-sm font-medium mb-2">Authentication Token</label>
+                    <label class="block text-sm font-medium mb-2">Password</label>
                     <div class="relative">
                         <input
                             type="password"
                             id="token-input"
-                            placeholder="Enter your token"
+                            placeholder="Enter your password"
                             class="w-full bg-gray-700 border border-gray-600 rounded px-3 pr-10 py-2 text-white focus:outline-none focus:border-blue-500"
                             required
                         >
